sandc/test/fixtures/astRegression/shouldFail/productions/switchPseudex/ElseBlockStatement.sand
pub class ElseBlockStatement {
    foo() {
        let a = switch val {
            case c {
                d
            }

            else {
                foo();
            }
        };
    }
}